--- a/package.json
+++ b/package.json
@@ -2,25 +2,48 @@
   "name": "horizon-banking",
   "version": "0.1.0",
   "private": true,
+  "description": "Horizon is a modern banking platform for everyone.",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fvucemilo/horizon-banking.git"
+  },
+  "keywords": [
+    "banking",
+    "finance",
+    "accounts",
+    "transactions"
+  ],
+  "author": "Filip Vučemilović-Grgić <filip.vucemilovic.grgic@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/fvucemilo/horizon-banking/issues"
+  },
+  "homepage": "https://github.com/fvucemilo/horizon-banking#readme",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.400.0",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
